org.mmisw.iserver 
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13
$Id$

2009-09-29   1.5.0.alpha29   (alpha23-28 skipped to sync with ontmd)
	Fixed issue #192 "wrong versioned/unversioned response"
	Util2.replaceNameSpace now uses Util2._inNamespace(Resource resource, String namespace)
	to determine when a resource is "located" in a given namespace.
	
	
2009-09-18   1.5.0.alpha22
	- New support to resolve term URIs. This is generalized for both ontology URIs and
	  term URIs via a new class ResolveUriResult and service Server.resolveUri(uri).
	  The operation first tries getOntologyInfo(uri) and then _getEntityInfo(..).
	- _getEntityInfo: The resolution of a term URI is based on the query:
	    SELECT ?prop ?value WHERE { <URI> ?prop ?value . }
	  against the Ont service (which maintains the ontological graph).
	  
	 
2009-09-11   1.5.0.alpha21
	- General user account management, login, and password reset completed:
		Fixed issue #176: login issue - forgot password user name
		Fixed Issue #173: user phone number can not be changes
	- Improvements in parsing of RESTful responses
	- New helper XmlAccessor: Used by UserAuthenticator and UserAccountCreatorUpdater
	- Check email address before creating/updating a user account. Ideally, a full verification
	  would include using the email (eg., sending some special URL that the user can click to
	  verify/activate his/her account).
		
	- TODO Next: use cookies to keep the session (Issue #154)


2009-09-10   1.5.0.alpha20

	- New UserAccountCreatorUpdater
	- New Server.createUpdateUserAccount
	
	- Renamed Config to ServerConfig
	- ServerConfig: new properties: MAIL_USER, MAIL_PASSWORD
	- New MailSender helper to send new password to a user ({activation,mail}.jar included)
	- Server: new operations:
		LoginResult authenticateUser(String userName, String userPassword);
		ResetPasswordResult resetUserPassword(String username);
		UserInfoResult getUserInfo(String username);
	
	
	
2009-09-08  1.5.0.alpha18